// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaList/> should display draggable list 1`] = `
<div>
  <div
    data-testid="draggable-list"
  />
</div>
`;

exports[`<MediaList/> should match click on the item 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        aria-disabled="false"
        class="MuiBox-root MuiBox-root-26 MuiButtonBase-root MuiListItem-root makeStyles-root-17 makeStyles-readonlyItem-15 MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart makeStyles-root-25"
        data-testid="media-list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="makeStyles-image-19 makeStyles-image-22"
        />
        <div
          class="MuiListItemText-root makeStyles-textRoot-21 makeStyles-textRoot-24"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-20 makeStyles-primaryText-23 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Me ikoeru kunmega avjiac gomusja ufizowu kesoma tabuli zal koupeas dahisli wacef mo erdeko cudpiv ro pu.
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        aria-disabled="false"
        class="MuiBox-root MuiBox-root-30 MuiButtonBase-root MuiListItem-root makeStyles-root-17 makeStyles-readonlyItem-15 MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart makeStyles-root-25"
        data-testid="media-list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="makeStyles-image-19 makeStyles-image-27"
        />
        <div
          class="MuiListItemText-root makeStyles-textRoot-21 makeStyles-textRoot-29"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-20 makeStyles-primaryText-28 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Mog gic gataga ihgih bi judpeta iv zap jatro ba licucce vibu bo sooki ikno.
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<MediaList/> should render 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        aria-disabled="false"
        class="MuiBox-root MuiBox-root-13 MuiButtonBase-root MuiListItem-root makeStyles-root-4 makeStyles-readonlyItem-2 MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart makeStyles-root-12"
        data-testid="media-list-item"
        role="button"
        tabindex="0"
      >
        <div
          class="makeStyles-image-6 makeStyles-image-9"
        />
        <div
          class="MuiListItemText-root makeStyles-textRoot-8 makeStyles-textRoot-11"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-7 makeStyles-primaryText-10 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Mucu ceda pi hahij le vitvep sadwupif kenmulo jutacu emibo cu umusosfu re cuznim reletwaj lojeibe lolmuj.
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
  </div>
</div>
`;
